# DiscoveryOS

./: .env.example  .env.production.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_en.md  SECURITY.md  dev-start.sh  dev-status.sh  dev-stop.sh  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  research_proposal.md  research_proposal_highlight.md
.claude/commands/: setup.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  daily-summary.yml  desktop-build.yml  docs.yml  readme-whats-new.yml
docs/: README_CN.md  README_DE.md  README_FR.md  README_JA.md  conf.py  docker.md  index.md
docs/_static/: custom.css
docs/development/: contributing.md  documentation.md  local-development.md  project-structure.md  readme-homepage-redesign.md  testing.md
docs/getting-started/: deployment.md  environment-variables.md  installation.md  overview.md
docs/notifications/: index.md
docs/troubleshooting/: faq.md
docs/usage/: api-reference.md  configuration.md  features.md
drizzle/meta/: _journal.json
opensource/: RELEASE_CHECKLIST.md  RELEASE_PLAN.md
public/: discoveryos.html  innoclaw.html
scripts/: batch-research-test.sh  build-desktop.sh  docker-entrypoint.sh  export-session.mjs  import-local-skills.mjs
scripts/lib/: utils.sh
site/: index.html
tauri/: package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs
(+111 files in other folders)
