[package]
name = "discoveryos-desktop"
version = "0.2.0"
edition = "2021"
description = "DiscoveryOS desktop shell"
license = "Apache-2.0"

[lib]
name = "discoveryos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow       = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tauri        = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio        = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
